--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pemon-information-table": {
+    "angular.io-example": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
