--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,14 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist/pemon-information-table"
+        "distDir": "dist/pemon-information-table/browser"
       }
     }
   ],
   "routes": [
+    {
+      "handle": "filesystem"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
